<resources>
    <string name="app_name">Github Client</string>
    <string name="text_text">Este es un texto de prueba</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="repo_description">Descripción</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="test_lang">Kotlin</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>

</resources>